Fix form visibility

--- a/Lesson 5 - CSS/code/homework/main.css
+++ b/Lesson 5 - CSS/code/homework/main.css
@@ -12,7 +12,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 600px;
+  width: 550px;
   margin: 50px auto;
   resize: both;
   overflow: visible;
@@ -24,12 +24,18 @@ nav {
 	padding: 5px;
 }
 
+//nav {
+	background-color: hsl(212, 33%, 89%);
+	box-shadow: 1px 1px 3px #aaa;
+}
+
 h1 {
 	margin: 0;
 	width: 90%;
 	font-size: 4vw;
 	font-size: 28pt;
 	text-transform: uppercase;
+	padding-top: 5px;
 }
 
 
@@ -63,7 +69,8 @@ span {
 }
 
 form {
-	padding: 10px;
+	padding: 15px 0 15px 5px;
+	display: none;
 }
 
 button {
